# hyprland-preview-share-picker

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  package.nix
.github/workflows/: ci.yml  flake-lock-update.yml  release.yml
lib/: Cargo.toml
src/: app.rs  config.rs  main.rs
src/views/: outputs.rs  region.rs  windows.rs
