[package]
name = "hyprland-preview-share-picker-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.13.0"
image = "0.25.10"
log = "0.4.32"
memfd = "0.6.5"
wayland-backend = "0.3.15"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
wayland-scanner = "0.31.10"
hyprland = { version = "0.4.0-beta.2", optional = true }
thiserror = "2.0.18"

[features]
hyprland-rs = ["dep:hyprland"]
